# CustomMath

./: CMakeLists.txt
.circleci/: config.yml
maths/: CMakeLists.txt
maths/include/: dualQuaternion.h  mat4.h  quat.h  transform.h  vec2.h  vec3.h  vec4.h
maths/src/: dualQuaternion.cpp  mat4.cpp  quat.cpp  transform.cpp  vec3.cpp
